# KeyForge

./: .env.template  .gitignore  KeyForge.postman_collection.json  README.md  docker-compose.backends.yaml  docker-compose.monitoring.yaml  docker-compose.override.yaml  docker-compose.proxy.yaml  docker-compose.yaml  page_loader.sh
application/: .dockerignore  .env.template  Dockerfile  exc_handler.py  log_conf.yaml  main.py  pyproject.toml
application/api/: __init__.py  files.py  hashers.py  keys.py
application/core/: config.py  hashengine.py  keysengine.py  otel.py  schemas.py
application/response_docs/: __init__.py
application/tests/: conftest.py
application/tests/routes/: test_files.py  test_hashers.py  test_keys.py
application/utils/: __init__.py  healthcheck.py  utils.py
frontend/: .dockerignore  Dockerfile  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FeatureCard.tsx  Hero.tsx  Layout.tsx  Navigation.tsx  ThemeToggle.tsx
frontend/src/components/hash/: Argon2HashTab.tsx  BcryptHashTab.tsx  HashResult.tsx  RandomTokenGenerator.tsx  SimpleHashTab.tsx
frontend/src/components/key/: KeyDisplay.tsx  KeyGenerationError.tsx  KeyGenerationForm.tsx
frontend/src/components/ui/: button-variants.tsx
frontend/src/config/: api.ts
frontend/src/pages/: FileChecksum.tsx  HashGeneration.tsx  Index.tsx  KeyGeneration.tsx  NotFound.tsx
frontend/src/services/: apiService.ts
grafana/certs/: grafana.crt  grafana.key
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/dashboards/fastapi/: fastapi-dashboard.json
kubernetes/: README.md  loki-values.yaml  prom-stack-values.yaml
kubernetes/keyforge/: Chart.yaml  values.yaml
kubernetes/keyforge/templates/: backend-config.yaml  backend-svc.yaml  deploy-backend.yaml  deploy-frontend.yaml  frontend-config.yaml  frontend-svc.yaml  ingress.yaml  prom-monitor.yaml
nginx/: nginx.conf
nginx/ssl/: dhparam.pem  server.crt  server.csr  server.key
prometheus/: prometheus.yml
tempo/: tempo.yaml
